sms-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: sms
  name: sms
spec:
  ports:
  - name: "50051"
    port: 50051
    targetPort: 50051
  selector:
    io.kompose.service: sms
status:
  loadBalancer: {}
